# suomilog

./: .gitignore  README.rst  pyproject.toml  retki.py  setup.py
examples/: employees.txt  hyvyys.txt  katsominen.txt  liikkuminen.txt  lyhyt-peli.txt  pp_test.py
examples/employees/: employees.suomilog  pp_test.py
examples/np_parser/: generator.py  np.suomilog  parser.py  run_tests.py  test_cases.tsv  vomittor.py
retki/: compiler.py  language.py  std.txt  tokenutils.py
suomilog/: __init__.py  cykparser.py  finnish.py  grammar.py  patternparser.py  stateparser.py
