[project]
name = "suomilog"
version = "1.0"
description = "Collection of utilities for parsing natural languages using context-free grammars"
readme = "README.rst"
requires-python = ">=3.14"
license = "GPL-3.0-or-later"
author = "Iikka Hauhio"
author_email = "iikka.hauhio@gmail.com"
dependencies = [
    "kfst-rs>=1.0.0",
    "pypykko>=0.3.0",
]
keywords = ["finnish", "nlp", "syntax"]

[project.optional-dependencies]
rich = [
    "rich>=14.2.0",
]

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""